client/main.scss
body {
    height: 95vh;
}

#render-target {
    height: 100%;
    width: 100%;
    min-height: 600px;
    min-width: 1300px;
}

.ui.container {
    height: 100%;
}

.row {
    height: 90%;
}

.column {
    float: left;
    width: 50%;
    height: 100%;
    position: relative;
    padding: 10px;
}

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

.banner {
    height: 5%;
    position: relative;
    font-size: 20px;
}

.handArea {
    width: 100%;
    height: 75%;
    position: relative;
    padding: 10px;
    background-color: #CE84AD;
    border-radius: 15px;
}

.rowTable {
    height: 50%;
}

.diArea {
    width: 100%;
    height: 75%;
    position: relative;
    padding: 10px;
    background-color: #4A7856;
    text-align: center;
    border-radius: 15px;
}

.diAreaWrapup {
    width: 100%;
    height: 50%;
    position: relative;
    padding: 10px;
    background-color: #4A7856;
    text-align: center;
    border-radius: 15px;
}

.dummyArea {
    height: 2%;
}

.pointsArea {
    width: 100%;
    height: 23%;
    position: relative;
    padding: 10px;
    text-align: center;
    background-color: #CDC776;
    border-radius: 15px;
}

.tableArea {
    float: left;
    width: 50%;
    height: 50%;
    position: relative;
    padding: 10px;
    text-align: center;
    border-radius: 10px;
}

.tableBanner {
    width: 100%;
    height: 18%;
    position: relative;
}

.handle {
	cursor: pointer;
}

#test {
    opacity: 100% !important;
}

